fixing disabling of hover after click.

--- a/src/App.css
+++ b/src/App.css
@@ -20,22 +20,31 @@
 #tiles {
   height: 100vh;
   width: 100vw;
+  position: relative;
   display: grid;
+  z-index: 2;
   grid-template-columns: repeat(var(--columns), 1fr);
   grid-template-rows: repeat(var(--rows), 1fr);
 }
 
 .tile {
   position: relative;
+  &:hover {
+    opacity: 0.50;
+  }
 }
 
 .tile:before {
-  background-color: rgb(20, 20, 20);
+  background-color: rgb(30, 30, 30);
   content: "";
   position: absolute;
   inset: 1px;
 }
 
-.tile:hover {
-  opacity: 0.50;
+.tile:hover:before {
+  opacity: 0.5;
+}
+
+body.toggled > #tiles > .tile:hover {
+  opacity: 0.5 !important;
 }
