--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,27 @@
 body.toggled > #tiles > .tile:hover {
   opacity: 0.5 !important;
 }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#title {
+  color: white;
+  font-family: "Rubik", sans-serif;
+  font-size: 8vw;
+  margin: 0px;
+  z-index: 3;
+}
+
+.title-wrapper {
+  transition: transform 0.5s ease-in-out;
+}
+
+.content-wrapper {
+  transition: transform 0.5s ease-in-out; /* Add transition */
+  transform: translateY(100vh);
+}
