--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,11 @@
 
 .tile {
   position: relative;
-  &:hover {
-    opacity: 0.50;
-  }
+  opacity: 1;
+  transition: opacity 1s ease-out;
+}
+.tile:hover {
+  opacity: 0.50;
 }
 
 .tile:before {
@@ -39,6 +41,8 @@
   content: "";
   position: absolute;
   inset: 1px;
+  opacity: 1;
+  transition: opacity 1s ease-out;
 }
 
 .tile:hover:before {
