--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,32 @@ body.toggled > #tiles > .tile:hover {
   align-items: center;
   min-height: 100vh; /* Ensure the wrapper takes up full viewport height */
 }
+
+.button-link {
+  align-items: center;
+  color: white;
+  backdrop-filter: blur(3px);
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  bottom: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  display: inline-flex;
+  gap: 5px;
+  right: 10px;
+  padding: 10px 20px;
+  position: fixed;
+  text-decoration: none;
+  transition: background-color 400ms, border-color 400ms;
+  z-index: 5;
+}
+
+.button-link > span {
+  height: 20px;
+  line-height: 20px;
+}
+
+.button-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
